# proto-course

./: .gitignore  README.md  flake.nix  justfile  makefile  pyproject.toml
core-banking-transformation/: transfo.md
exercices/buf_open-apiv2_http/: buf.gen.yaml  buf.yaml  go.mod  makefile
exercices/protoc_open-apiv2_http/: client.py  go.sum  makefile  server.go
exercices/protoc_open-apiv2_http/proto/ibanfirst/v0/: api.proto
exercices/simple_protoc/: client.py  go.mod  go.sum  main.py  makefile  server.go
exercices/simple_protoc/ibanfirst/v0/: api_pb2.py  api_pb2_grpc.py
exercices/simple_protoc/proto/ibanfirst/v0/: api.proto
presentation/: mermaid-charts.md  protoc_arch.avif  slides.typ  works.bib
